# iphoneold

./: .env.example  .gitignore  README.md  SESSION_START.md  WEEKLY_OPERATIONS.md  config.example.yaml  daily_notes.md  pyproject.toml  run_monitor_task.ps1
app/: __init__.py  config.py  main.py
app/cli/: __init__.py  entrypoint.py
app/extractors/: __init__.py  base.py  llm_extractor.py  rule_based.py
app/models/: __init__.py  entities.py
app/notifiers/: __init__.py  telegram.py
app/parsers/: __init__.py  base.py  example_market.py  factory.py  iosys_buyback.py  mercari_public.py
app/repositories/: __init__.py  fetcher.py  item_repository.py
app/scoring/: __init__.py  profit_estimator.py
app/services/: __init__.py  buyback.py  filtering.py  iosys_buyback.py  monitor.py
app/ui/: __init__.py  review_app.py
app/utils/: __init__.py  rate_limiter.py  text.py
docs/: 00_overview.md  01_architecture.md  02_data_model.md  03_scraping_strategy.md  04_scoring_logic.md  05_notification_rules.md  06_runbook.md
scripts/: recreate_monitor_tasks.ps1  run_once.ps1
tests/: test_buyback_service.py  test_cli_buyback.py  test_cli_review_status.py  test_filtering.py  test_monitor_notification_quality.py  test_notification_dedup.py  test_parser_example_market.py  test_parser_iosys_buyback.py  test_parser_mercari_public.py  test_profit_estimator.py  test_review_ui.py  test_rule_based_extractor.py  test_telegram_notifier.py
tests/fixtures/: realistic_scored_items.json
